package io.github.aptemkov.tasksapp.presentation.utils

// HomeScreen tags:
const val TEST_TAG_HOME_TOOLBAR_SETTINGS = "home_screen_toolbar_settings"
const val TEST_TAG_HOME_TOOLBAR_EYE = "home_screen_toolbar_eye"
const val TEST_TAG_HOME_FAB = "home_screen_fab"
const val TEST_TAG_HOME_TODO_ITEM = "home_screen_todo_item"

// TaskScreen tags:
const val TEST_TAG_TASK_TEXT_FIELD = "task_screen_text_field"
const val TEST_TAG_TASK_TEXT_FIELD_WARNING_ICON = "task_screen_text_field_warning_icon"
const val TEST_TAG_TASK_SAVE_BTN = "task_screen_save_button"

// SettingsScreen tags:
const val TEST_TAG_SETTINGS_THEME_TITLE = "settings_screen_theme_title"
const val TEST_TAG_SETTINGS_THEME_ITEM = "settings_screen_theme_item_"
